<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/container"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.collegelife.ui.main.MenuActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:stretchColumns="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="62dp">

                <ImageButton
                    android:id="@+id/logout"
                    android:layout_width="67dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/logout"
                    app:srcCompat="@drawable/exit" />

                <Button
                    android:id="@+id/highscore_button"
                    android:layout_width="127dp"
                    android:layout_height="53dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="3dp"
                    android:baselineAligned="false"
                    android:text="@string/highscores" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/game_logo"
                android:layout_width="match_parent"
                android:layout_height="196dp"
                android:layout_marginTop="64dp"
                android:contentDescription="@string/main_logo"
                android:src="@drawable/ic_school_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.479"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/game_name"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginTop="32dp"
                android:text="@string/college_life"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_logo" />

            <Button
                android:id="@+id/start_button"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:text="@string/start"
                app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_name" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_marginBottom="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Switch
                android:id="@+id/switchLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="English" />


        </LinearLayout>
    </ScrollView>
    >
</androidx.constraintlayout.widget.ConstraintLayout>