...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90999997" />

    <Button
        android:id="@+id/SpinButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/spinboard2"
        android:contentDescription="@string/Spade"
...
