...
    <string name="setting_icon" translatable="false">setting_icon</string>
    <string name="settings_button" translatable="false">settings_button</string>
    <string name="settings" translatable="false">settings</string>
    <string name="Character_page_icon" translatable="false">Character_page_icon</string>
    <string name="player1" translatable="false">player1</string>
    <string name="enter_character_name">Enter Character Name</string>
    <string name="start_game">Start game</string>
    <string name="next_player">Next player</string>

    <string name="title_activity_game" translatable="false">GameActivity</string>
    <string name="game_image" translatable="false">game_image</string>
    <string name="play" translatable="false">press to play</string>
    <string name="Highscores" translatable="false">TextView</string>
...
    <string name="title_activity_test" translatable="false">test</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="start">Start</string>
    <string name="logout" translatable="false">logout</string>
    <string name="GPA" translatable="false">GPA</string>
    <string name="Debt" translatable="false">Debt</string>
    <string name="backgroundgrid" translatable="false">backgroundgrid</string>
    <string name="happy_graduation">Happy Graduation</string>
    <string name="house" translatable="false">House</string>
...
